--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.11",
