--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-MYSQL_DATABASE=
+MYSQL_DATABASE=""
 MYSQL_PASSWORD=""
 MYSQL_HOST="127.0.0.1"
 MYSQL_USERNAME=""
+AWS_ACCESS_KEY_ID=""
+AWS_SECRET_ACCESS_KEY=""
