--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "http-errors": "~1.6.3",
