--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
