--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.688.0",
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
@@ -15,6 +16,7 @@
     "express-session": "^1.17.1",
     "faker": "^4.1.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
