updating env variables

--- a/.env.config
+++ b/.env.config
@@ -1,6 +1,6 @@
-MYSQL_DATABASE=wlnmsbjy08ek42v1
-MYSQL_PASSWORD=gafeghdg4exml6qd
-MYSQL_HOST=qf5dic2wzyjf1x5x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
-MYSQL_USERNAME=jvgi0mdbpkzb61i8
-AWS_ACCESS_KEY_ID=AKIAQQ2FOZCIJWID2CCN
-AWS_SECRET_ACCESS_KEY=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
+MYSQL_DATABASE=
+MYSQL_PASSWORD=
+MYSQL_HOST=
+MYSQL_USERNAME=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
